--- a/assets/sass/default/_color_variable.scss
+++ b/assets/sass/default/_color_variable.scss
@@ -2,8 +2,8 @@
 1. Basic Color Variable
 ----------------------------------------------------------------*/
 
-$white: #fff;
-$black: #000;
+$white:#000;
+$black:  #fff;
 $primary: #ff3d24;
 $secondary: rgba(255, 61, 36, 0.7);
 $border: rgba(255, 255, 255, 0.25);
