--- a/assets/css/style_dark.css
+++ b/assets/css/style_dark.css
@@ -57,9 +57,9 @@
 ----------------------------------------------------------------*/
 html,
 body {
-  color: var(--body-color);
+  color: var(--body-bg-color);
   font-family: var(--body-font-family);
-  background-color: var(--body-bg-color);
+  background-color: var(--white-color);
   font-size: 18px;
   font-weight: 400;
   line-height: 1.6em;
@@ -74,7 +74,7 @@ h4,
 h5,
 h6 {
   clear: both;
-  color: var(--heading-color);
+  color: var(--black-color);
   font-family: var(--heading-font-family);
   padding: 0px;
   margin: 0px;
@@ -178,7 +178,7 @@ table th {
 }
 table td,
 table th {
-  border-top: 1px solid #000;
+  border-top: 1px solid #fff;
   padding: 11px 10px;
 }
 
@@ -196,7 +196,7 @@ strong {
 
 pre {
   color: var(--body-color);
-  border: 1px solid #000;
+  border: 1px solid #fff;
   font-size: 18px;
   padding: 25px;
   border-radius: 5px;
@@ -443,8 +443,8 @@ kbd {
   border-bottom-right-radius: 10px;
 }
 .car-detail.wheel {
-  height: 20px;
-  width: 20px;
+  height: 200px;
+  width: 200px;
   border-radius: 50%;
   top: 20px;
   left: 12px;
@@ -453,7 +453,7 @@ kbd {
   animation-name: spin;
 }
 .car-detail.wheel2 {
-  left: 82px;
+  /**left: 82px;**/
 }
 
 .preloader-content.loaded .car {
@@ -923,7 +923,7 @@ kbd {
 
 .ak-white-color,
 .ak-white-color-hover:hover {
-  color: #000;
+  color: #fff;
 }
 
 .ak-primary-color {
@@ -932,11 +932,11 @@ kbd {
 
 .ak-white-color,
 .ak-white-color-hover:hover {
-  color: #000;
+  color: #fff;
 }
 
 .ak-white-bg {
-  background-color: #000;
+  background-color: #fff;
 }
 
 .ak-gray-bg-20 {
@@ -945,12 +945,12 @@ kbd {
 
 .ak-white-bg-1,
 .ak-white-bg-1-hover:hover {
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .ak-white-bg,
 .ak-white-bg-hover:hover {
-  background-color: #000;
+  background-color: #fff;
 }
 
 .ak-primary-bg,
@@ -1009,7 +1009,7 @@ kbd {
 .ak-stroke-text {
   line-height: 1.2em;
   color: transparent;
-  -webkit-text-stroke: 1px var(--body-color);
+  -webkit-text-stroke: 1px var(--black-color);
   transition: all 0.3s;
   cursor: pointer;
 }
@@ -1181,11 +1181,11 @@ kbd {
   border-left: 16px solid currentColor;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  color: #000;
+  color: #fff;
 }
 
 .ak-heartbeat-btna:hover {
-  color: #fff;
+  color: #000;
 }
 
 @keyframes pulse-border {
@@ -1246,7 +1246,7 @@ kbd {
   margin-bottom: 10px;
   line-height: normal;
   text-transform: uppercase;
-  color: var(--white-color);
+  color: var(--black-color);
   z-index: 10;
   position: relative;
 }
@@ -1299,7 +1299,7 @@ kbd {
   display: inline-flex;
 }
 .ak-tab-links.ak-style1 li.active a {
-  background-color: #000;
+  background-color: #fff;
   border-radius: 10px;
 }
 
@@ -1348,12 +1348,12 @@ kbd {
   transition: all 0.4s ease;
   z-index: 10;
   background-color: #000000;
-  box-shadow: 0px 1px 5px 1px rgba(255, 255, 255, 0.2);
+  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
 }
 .ak-scrollup:hover {
-  background-color: #000;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
 }
 
 .ak-scrollup.ak-scrollup-show {
@@ -1364,6 +1364,7 @@ kbd {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   overflow: hidden;
+  margin-right: 80px;
 }
 .swiper-slide .ak-entity-img {
   display: none;
@@ -1473,7 +1474,7 @@ kbd {
 }
 .btn-animation:hover, .cta .cta-info .cta-btn:hover {
   font-size: 17px !important;
-  color: rgba(0, 0, 0, 0.9) !important;
+  color: rgba(255, 255, 255, 0.9) !important;
   background-color: rgba(255, 61, 36, 0.7) !important;
   transform: translate3d(0, -8px, 0.01px);
 }
@@ -1491,7 +1492,7 @@ kbd {
 .select-input-customize {
   border-radius: 0;
   background-color: transparent;
-  color: #000;
+  color: #fff;
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
 .select-input-customize:focus {
@@ -1500,7 +1501,7 @@ kbd {
 }
 .select-input-customize option {
   background-color: var(--black-color);
-  color: rgba(0, 0, 0, 0.25);
+  color: rgba(255, 255, 255, 0.25);
 }
 .select-input-customize option:visited {
   background-color: #ff3d24 !important;
@@ -1907,7 +1908,7 @@ kbd {
   position: absolute;
   left: 0;
   right: 0;
-  background: #000;
+  background: #fff;
   transition: all 0.4s ease-out;
   opacity: 0;
 }
@@ -2012,7 +2013,7 @@ kbd {
   left: 50%;
   width: 20px;
   height: 1px;
-  background: #000;
+  background: #fff;
   margin-left: -10px;
   transform: rotate(-45deg);
   transition: all 0.4s ease-in-out;
@@ -2026,7 +2027,7 @@ kbd {
   left: 50%;
   width: 20px;
   height: 1px;
-  background: #000;
+  background: #fff;
   margin-left: -10px;
   transform: rotate(45deg);
   transition: all 0.4s ease-in-out;
@@ -2034,7 +2035,7 @@ kbd {
 
 .ak-video-popup-close:hover:before,
 .ak-video-popup-close:hover:after {
-  background: #fff;
+  background: #000;
 }
 
 .ak-video-popup-layer {
@@ -2072,7 +2073,7 @@ kbd {
   left: 0;
   top: 0;
   opacity: 0;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   transition: all 0.4s ease;
 }
 .ak-video-block.ak-style1:hover::before {
@@ -2193,7 +2194,7 @@ kbd {
   align-items: center;
   text-transform: uppercase;
   font-style: italic;
-  color: #000;
+  color: #fff;
   font-family: Baskervville;
   padding-left: 15%;
   padding-right: 5%;
@@ -2216,7 +2217,7 @@ kbd {
 }
 .ak-site_header.ak-style1 .header-top .top-main-menu li > a:hover {
   transform: translateX(50px);
-  color: #000;
+  color: #fff;
 }
 
 .ak-nav + .ak-toolbox {
@@ -2298,15 +2299,15 @@ kbd {
   display: inline-block;
 }
 .ak-site_branding img {
-  max-height: 45px;
+  max-height: 80px;
 }
 
 @media screen and (min-width: 1200px) {
   .ak-nav_list.ak-color_1 {
-    color: #000;
+    color: #fff;
   }
   .ak-nav_list.ak-color_1 ul {
-    color: #fff;
+    color: #000;
   }
   .ak-main_header {
     position: relative;
@@ -2346,7 +2347,7 @@ kbd {
     margin-right: 50px;
     height: 90px;
     text-transform: uppercase;
-    color: #000;
+    color: #fff;
   }
   .ak-nav .ak-nav_list > li:last-child {
     margin-right: 0;
@@ -2460,7 +2461,7 @@ kbd {
     transform: translate(-50%, -50%);
     height: 2px;
     width: 35px;
-    background-color: #000;
+    background-color: #fff;
     transition: all 0.3s ease;
   }
   .ak-munu_dropdown_toggle_1:before {
@@ -2486,7 +2487,7 @@ kbd {
     transition: all 0.5s ease;
   }
   .ak-nav .ak-nav_list .ak-mega_wrapper a:hover img {
-    border-color: rgba(0, 0, 0, 0.6);
+    border-color: rgba(255, 255, 255, 0.6);
   }
   .ak-nav .ak-nav_list .ak-mega_wrapper > li {
     flex: 1;
@@ -2577,10 +2578,10 @@ kbd {
     display: block;
     padding: 8px 20px;
     text-transform: uppercase;
-    color: #000;
+    color: #fff;
   }
   .ak-nav .ak-nav_list a:hover {
-    color: #000;
+    color: #fff;
   }
   .ak-nav .menu-item-has-children {
     position: relative;
@@ -2600,7 +2601,7 @@ kbd {
   .ak-munu_toggle span:after {
     width: 100%;
     height: 2px;
-    background-color: #000;
+    background-color: #fff;
     display: block;
   }
   .ak-munu_toggle span {
@@ -2651,10 +2652,10 @@ kbd {
   .ak-nav .ak-nav_list a {
     position: relative;
     text-transform: uppercase;
-    color: #000;
+    color: #fff;
   }
   .ak-nav .ak-nav_list a:hover {
-    color: #000;
+    color: #fff;
   }
   .ak-site_header.ak-style1 .ak-main_header_in {
     height: 80px;
@@ -2702,7 +2703,7 @@ kbd {
     margin-right: 0;
   }
   .ak-site_branding img {
-    max-height: 32px;
+    max-height: 67px;
   }
   .ak-site_header.ak-style1 .ak-btn span {
     display: none;
@@ -2733,7 +2734,7 @@ kbd {
 }
 .ak-menu-toggle .ak-menu-icon path {
   fill: none;
-  stroke: #000;
+  stroke: #fff;
   stroke-linecap: round;
 }
 
@@ -2792,7 +2793,7 @@ kbd {
   border-bottom: 1px solid #ff3d24;
 }
 .footer.style-1 .footer-email .footer-heading-email .email-form .email-input {
-  color: #000;
+  color: #fff;
   background-color: transparent;
   border: 0;
 }
@@ -2821,7 +2822,7 @@ kbd {
   font-size: 18px;
 }
 .footer.style-1 .footer-content .footer-info .phone {
-  color: #000;
+  color: #fff;
   font-size: 48px;
   font-weight: 700;
 }
@@ -2929,7 +2930,7 @@ kbd {
   display: flex;
   gap: 30px;
   justify-content: center;
-  color: #000;
+  color: #fff;
   font-size: 22px;
   cursor: pointer;
 }
@@ -2938,7 +2939,7 @@ kbd {
 }
 .pagination-style .current.next,
 .pagination-style .current.prev {
-  color: #000;
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -2970,7 +2971,7 @@ kbd {
 }
 .common-btn:hover {
   transition: background-color 0.4s, transform 0.3s, color 0.3s;
-  background-color: black;
+  background-color: white;
   color: var(--black-color);
   transform: translate3d(0px, -7px, 0.01px);
 }
@@ -3015,7 +3016,7 @@ kbd {
 }
 .get-started-btn:hover {
   background: rgba(255, 61, 36, 0.7);
-  color: black;
+  color: white;
 }
 .get-started-btn span svg {
   transition: all 0.3s;
@@ -3131,7 +3132,7 @@ kbd {
   width: 100%;
   height: 1px;
   bottom: -25px;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   transition: all 0.3s ease;
 }
 .service-card.type-two:last-child::after {
@@ -3187,7 +3188,7 @@ kbd {
 }
 .service-card-style-2 .service-desp .title {
   font-family: var(--heading-font-family);
-  color: #000;
+  color: #fff;
   font-size: 24px;
   display: inline-block;
   margin-bottom: 7px;
@@ -3291,6 +3292,7 @@ kbd {
 }
 .ak-hero.ak-style1 .hero-slider-info .hero-main-title {
   text-transform: uppercase;
+  color: white;
 }
 .ak-hero.ak-style1 .hero-slider-info .hero-main-title-1 {
   text-transform: uppercase;
@@ -3299,6 +3301,7 @@ kbd {
   max-width: 560px;
   font-size: 18px;
   line-height: 27px;
+  color: white;
 }
 
 .hero-contact-info {
@@ -3490,13 +3493,13 @@ kbd {
   font-size: 62px;
 }
 .ak-funfact.ak-style1 .ak-funfact-number.color-1 {
-  color: #000;
+  color: #fff;
 }
 .ak-funfact.ak-style1 .ak-funfact-text {
   margin-top: 10px;
 }
 .ak-funfact.ak-style1 .ak-funfact-text p {
-  color: #000;
+  color: #fff;
   font-family: Oxanium;
   font-weight: 700;
   line-height: normal;
@@ -3720,7 +3723,7 @@ kbd {
   width: 30px;
   height: 30px;
   cursor: pointer;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   padding: 0px 8px;
   display: inline-block;
 }
@@ -3735,7 +3738,7 @@ kbd {
 .team-card .team-info .team-title a {
   cursor: pointer;
   font-size: 20px;
-  color: #000;
+  color: #fff;
   font-weight: 700;
   font-family: var(--heading-font-family);
 }
@@ -3822,7 +3825,7 @@ kbd {
 .ceo-content.type_2 .right-info .ceo-desp .address-list span {
   font-size: 18px;
   font-weight: 700;
-  color: #000;
+  color: #fff;
 }
 
 .all-members .member-card:hover,
@@ -3870,7 +3873,7 @@ kbd {
 .member-card .member-info .member-title .title {
   font-size: 20px;
   font-weight: 700;
-  color: #000;
+  color: #fff;
 }
 .member-card .member-info .member-title .title:hover {
   color: #ff3d24;
@@ -4122,7 +4125,7 @@ kbd {
   font-size: 20px;
   font-weight: 700;
   font-family: var(--heading-font-family);
-  color: #000;
+  color: #fff;
 }
 .blog-card .blog-body-info .blog-title:hover {
   color: #ff3d24;
@@ -4266,7 +4269,7 @@ kbd {
   align-items: center;
   padding: 13px 19px;
   font-size: 18px;
-  color: #000;
+  color: #fff;
   text-transform: uppercase;
   background-color: #ff3d24;
 }
@@ -4444,7 +4447,7 @@ kbd {
   padding-left: 60px;
   font-weight: 700;
   font-size: 20px;
-  color: #000;
+  color: #fff;
   line-height: normal;
   font-family: var(--heading-font-family);
 }
@@ -4454,7 +4457,7 @@ kbd {
   font-weight: 700;
   line-height: normal;
   font-size: 20px;
-  color: #000;
+  color: #fff;
   font-family: var(--heading-font-family);
 }
 
@@ -4483,7 +4486,7 @@ kbd {
   content: "+";
   border-bottom: none;
   position: relative;
-  color: #000;
+  color: #fff;
 }
 .company-tab .tabs .active-tab:after {
   width: 60%;
@@ -4558,7 +4561,7 @@ kbd {
 }
 .contact-content .contact-form.form-bg {
   padding: 75px;
-  background-color: #fff;
+  background-color: #000;
 }
 
 .contact-form .from-inputs {
@@ -4567,7 +4570,7 @@ kbd {
   margin-bottom: 25px;
 }
 .contact-form .from-inputs input {
-  color: #000;
+  color: #fff;
   background-color: transparent;
   padding: 12px 20px;
   border: 1px solid rgba(255, 255, 255, 0.25);
@@ -4575,7 +4578,7 @@ kbd {
   outline: none;
 }
 .contact-form .from-inputs input:focus {
-  border-color: #000 !important;
+  border-color: #fff !important;
   box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.19);
 }
 .contact-form .from-inputs .type_1 {
@@ -4589,7 +4592,7 @@ kbd {
   font-size: 16px;
 }
 .contact-form .from-inputs .type_1 input {
-  color: #000;
+  color: #fff;
   border: 1px solid rgba(255, 61, 36, 0.4392156863);
 }
 .contact-form .from-inputs .type_1 input:focus {
@@ -4610,14 +4613,14 @@ kbd {
 }
 .contact-form .from-textarea textarea {
   padding: 12px 20px;
-  color: #000;
+  color: #fff;
   outline: none;
   border: 1px solid rgba(255, 255, 255, 0.25);
   flex-grow: 1;
   background-color: transparent;
 }
 .contact-form .from-textarea textarea:focus {
-  border-color: #000 !important;
+  border-color: #fff !important;
   box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.19);
 }
 .contact-form .from-textarea .type_1 {
@@ -4630,7 +4633,7 @@ kbd {
   text-transform: uppercase;
 }
 .contact-form .from-textarea .type_1 textarea {
-  color: #000;
+  color: #fff;
   border: 1px solid rgba(255, 61, 36, 0.4392156863);
 }
 .contact-form .from-textarea .type_1 textarea:focus {
@@ -4668,7 +4671,7 @@ kbd {
   border-radius: 5px;
 }
 .custom-file .custom-file-upload span {
-  color: #000;
+  color: #fff;
   font-size: 16px;
 }
 .custom-file input {
@@ -4694,10 +4697,10 @@ kbd {
   font-size: 24px;
   font-family: var(--heading-font-family);
   justify-content: space-between;
-  color: #000;
+  color: #fff;
 }
 .contact-info .right-info .info-card:nth-child(odd) {
-  background-color: #fff;
+  background-color: #000;
 }
 
 @media screen and (max-width: 991px) {
