--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,9 +57,9 @@
 ----------------------------------------------------------------*/
 html,
 body {
-  color: var(--body-color);
+  color: var(--body-bg-color);
   font-family: var(--body-font-family);
-  background-color: var(--body-bg-color);
+  background-color: var(--white-color);
   font-size: 18px;
   font-weight: 400;
   line-height: 1.6em;
@@ -74,7 +74,7 @@ h4,
 h5,
 h6 {
   clear: both;
-  color: var(--heading-color);
+  color: var(--black-color);
   font-family: var(--heading-font-family);
   padding: 0px;
   margin: 0px;
@@ -1009,7 +1009,7 @@ kbd {
 .ak-stroke-text {
   line-height: 1.2em;
   color: transparent;
-  -webkit-text-stroke: 1px var(--body-color);
+  -webkit-text-stroke: 1px var(--black-color);
   transition: all 0.3s;
   cursor: pointer;
 }
@@ -1246,7 +1246,7 @@ kbd {
   margin-bottom: 10px;
   line-height: normal;
   text-transform: uppercase;
-  color: var(--white-color);
+  color: var(--black-color);
   z-index: 10;
   position: relative;
 }
@@ -2947,9 +2947,11 @@ kbd {
 ----------------------------------------------------------------*/
 .common-page-title {
   margin-bottom: 30px;
+  color: white;
 }
 .common-page-title .page-title {
   text-transform: uppercase;
+  color: white;
 }
 
 /*--------------------------------------------------------------
@@ -2979,7 +2981,7 @@ kbd {
 .more-btn {
   position: relative;
   display: inline-block;
-  color: var(--white-color);
+  color: var(--black-color);
   font-size: 18px;
   min-width: 100px;
   text-transform: uppercase;
@@ -3292,6 +3294,7 @@ kbd {
 }
 .ak-hero.ak-style1 .hero-slider-info .hero-main-title {
   text-transform: uppercase;
+  color: white;
 }
 .ak-hero.ak-style1 .hero-slider-info .hero-main-title-1 {
   text-transform: uppercase;
@@ -3300,6 +3303,7 @@ kbd {
   max-width: 560px;
   font-size: 18px;
   line-height: 27px;
+  color: white;
 }
 
 .hero-contact-info {
@@ -3559,6 +3563,7 @@ kbd {
   margin-left: 0px;
   transition: all 0.6s;
   transition-delay: 0.6s;
+  color: white;
 }
 .ak-testimonal .testimonal-info.ak-style1 {
   display: flex;
@@ -4484,7 +4489,7 @@ kbd {
   content: "+";
   border-bottom: none;
   position: relative;
-  color: #fff;
+  color: black;
 }
 .company-tab .tabs .active-tab:after {
   width: 60%;
