--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3501,7 +3501,7 @@ kbd {
   margin-top: 10px;
 }
 .ak-funfact.ak-style1 .ak-funfact-text p {
-  color: #fff;
+  color: #AA0E0E;
   font-family: Oxanium;
   font-weight: 700;
   line-height: normal;
