--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3444,11 +3444,12 @@ kbd {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--black-color);
+  background-color: var(--primary-color);
   padding: 45px 35px;
   text-align: center;
   font-size: 16px;
   height: 100%;
+  color: white;
 }
 .service-progress-card .service-item .service-info .title {
   margin-top: 15px;
