--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2837,7 +2837,7 @@ kbd {
   text-transform: uppercase;
 }
 .footer.style-1 .footer-content .footer-address {
-  max-width: 223px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   gap: 15px;
