--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4701,10 +4701,11 @@ kbd {
   font-size: 24px;
   font-family: var(--heading-font-family);
   justify-content: space-between;
-  color: #fff;
+  color: var(--primary-color);
 }
 .contact-info .right-info .info-card:nth-child(odd) {
-  background-color: #000;
+  background-color: var(--primary-color);
+  color: white;
 }
 
 @media screen and (max-width: 991px) {
